# Simple_CPP_Baseline_JPEG_Encoder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Encoder.hpp  HuffmanTree.hpp  Markers.hpp  RLC.hpp  Transform.hpp  Types.hpp  Utility.hpp
src/: Encoder.cpp  HuffmanTree.cpp  RLC.cpp  Transform.cpp
